topic 6 - changes/ refactoring